--- a/frontend.html
+++ b/frontend.html
@@ -130,7 +130,7 @@ async function analyzeEmail() {
         const response = await fetch("https://phishing-backend-axca.onrender.com/predict", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({ email: email })
+            body: JSON.stringify({ text: email })
         });
 
         const data = await response.json();
