--- a/index.html
+++ b/index.html
@@ -27,11 +27,17 @@
         <div class="bg-white shadow-lg rounded-2xl p-6 mb-6 flex items-center justify-between">
             <div>
                 <h1 class="text-3xl font-bold text-gray-800">Phishing Email Detector</h1>
-                <p class="text-gray-600">AI-Powered Email Security Analysis by Amitabh</p>
+                <p class="text-gray-600">Email Security Intelligence Developed by Amitabh’s Cyber-AI Lab</p>
             </div>
+
             <div class="text-right">
                 <p class="text-sm text-gray-500">Model Accuracy</p>
                 <p class="text-3xl font-bold text-green-600">95.71%</p>
+
+                <button onclick="openModelModal()" 
+                    class="mt-2 text-xs px-3 py-1 bg-indigo-100 text-indigo-700 rounded-lg border border-indigo-300 hover:bg-indigo-200">
+                    Model Info
+                </button>
             </div>
         </div>
 
@@ -40,6 +46,24 @@
             <h2 class="text-xl font-semibold text-gray-800 mb-2 flex items-center gap-2">
                 📧 Email Content Analysis
             </h2>
+
+            <!-- SAMPLE EMAIL BUTTONS -->
+            <div class="flex gap-3 mb-4">
+                <button onclick="loadSample('phishing')" 
+                    class="text-sm bg-red-50 text-red-700 px-4 py-2 rounded-lg border border-red-200 hover:bg-red-100">
+                    Load Phishing Sample
+                </button>
+
+                <button onclick="loadSample('safe')" 
+                    class="text-sm bg-green-50 text-green-700 px-4 py-2 rounded-lg border border-green-200 hover:bg-green-100">
+                    Load Safe Sample
+                </button>
+
+                <button onclick="loadSample('suspicious')" 
+                    class="text-sm bg-yellow-50 text-yellow-700 px-4 py-2 rounded-lg border border-yellow-200 hover:bg-yellow-100">
+                    Load Suspicious Sample
+                </button>
+            </div>
 
             <textarea
                 id="emailContent"
@@ -107,20 +131,58 @@
         </div>
 
         <p class="text-center text-xs text-gray-500 mt-6">
-            Powered by Amitabh's Machine Learning Model
+            Designed and defended by Amitabh’s Cyber-AI Lab
         </p>
     </div>
 
+<!-- MODEL INFO MODAL -->
+<div id="modelModal" class="fixed inset-0 bg-black/40 backdrop-blur-sm hidden items-center justify-center">
+    <div class="bg-white p-6 rounded-xl shadow-xl max-w-lg w-full">
+        <h2 class="text-2xl font-bold mb-3 text-gray-800">Model Information</h2>
+
+        <p class="text-gray-700 mb-2"><strong>Algorithm:</strong> Logistic Regression</p>
+        <p class="text-gray-700 mb-2"><strong>Dataset Size:</strong> 18,634 labeled emails</p>
+        <p class="text-gray-700 mb-2"><strong>Training Features:</strong> TF-IDF (unigrams + bigrams)</p>
+        <p class="text-gray-700 mb-2"><strong>Evaluation:</strong> 95.71% Accuracy, 94.56% F1 Score</p>
+
+        <button onclick="closeModelModal()" 
+            class="mt-4 w-full py-2 bg-indigo-600 text-white rounded-lg hover:bg-indigo-700">
+            Close
+        </button>
+    </div>
+</div>
+
 <script>
+/* --- SAMPLE EMAILS --- */
+const samples = {
+    phishing: `URGENT: Your account has been suspended.
+Click the link below immediately to verify your identity:
+http://malicious-login.com/verify
+Failure to act will result in permanent account closure.`,
+
+    safe: `Hi Team,
+Just a reminder that the Q4 project meeting is scheduled for Tuesday.
+Let me know if you need any documents beforehand.
+Best,
+John`,
+
+    suspicious: `Hello user,
+Your mailbox storage is almost full.
+Click the following link to increase your quota:
+http://unknown-service.com/upgrade`
+};
+
+function loadSample(type) {
+    document.getElementById("emailContent").value = samples[type];
+}
+
+/* --- ANALYSIS --- */
 async function analyzeEmail() {
     const email = document.getElementById("emailContent").value.trim();
     const btn = document.getElementById("analyzeBtn");
     const resultBox = document.getElementById("resultBox");
 
-    if (!email) {
-        alert("Please enter email content to analyze");
-        return;
-    }
+    if (!email) return alert("Please enter email content to analyze");
 
     btn.innerHTML = '<div class="spinner"></div> Analyzing...';
     btn.disabled = true;
@@ -129,40 +191,65 @@ async function analyzeEmail() {
         const response = await fetch("https://phishing-backend-axca.onrender.com/predict", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
-
-            body: JSON.stringify({ email: email }) 
+            body: JSON.stringify({ email })
         });
 
         const data = await response.json();
         const isPhishing = data.prediction === 1;
 
+        /* --- NLP INDICATORS --- */
+        const indicators = [];
+        const lower = email.toLowerCase();
+
+        if (lower.includes("verify") || lower.includes("confirm"))
+            indicators.push("Verification request detected");
+        if (lower.includes("urgent") || lower.includes("immediately"))
+            indicators.push("Urgency / pressure language detected");
+        if (email.includes("http://") || email.includes("https://"))
+            indicators.push("Presence of external links");
+        if (email.length < 40)
+            indicators.push("Email unusually short (possible scam)");
+
+        const indicatorList = indicators.length
+            ? indicators.map(i => `<li>${i}</li>`).join("")
+            : "<li>No major phishing indicators detected</li>";
+
         resultBox.classList.remove("hidden");
 
+        /* --- UI RESULT BLOCK --- */
         resultBox.innerHTML = `
-            <h3 class="text-xl font-bold mb-3 ${isPhishing ? 'text-red-600' : 'text-green-600'}">
-                ${isPhishing ? "🚨 Phishing Detected" : "✅ Safe Email"}
-            </h3>
+            <div class="flex items-center justify-between mb-4">
+                <h3 class="text-xl font-bold ${isPhishing ? 'text-red-600' : 'text-green-600'}">
+                    ${isPhishing ? "🚨 Phishing Detected" : "✅ Safe Email"}
+                </h3>
 
-            <p class="text-gray-700 text-lg font-medium">
-                Confidence: <span class="font-bold">
-                    ${isPhishing ? data.phishing_prob : data.safe_prob}%
+                <span class="px-3 py-1 text-sm font-semibold rounded-lg 
+                    ${isPhishing ? 'bg-red-100 text-red-700' : 'bg-green-100 text-green-700'}">
+                    ${isPhishing ? "High Risk" : "Low Risk"}
                 </span>
+            </div>
+
+            <p class="text-gray-700 mb-2"><strong>Confidence Score</strong></p>
+
+            <div class="w-full bg-gray-200 rounded-full h-3 mb-3">
+                <div class="h-3 rounded-full transition-all duration-500 
+                ${isPhishing ? 'bg-red-500' : 'bg-green-500'}" 
+                    style="width: ${isPhishing ? data.phishing_prob : data.safe_prob}%">
+                </div>
+            </div>
+
+            <p class="text-gray-700 mb-4">
+                ${(isPhishing ? data.phishing_prob : data.safe_prob)}% confidence this email is 
+                <strong>${isPhishing ? "phishing" : "safe"}</strong>.
             </p>
 
-            <div class="mt-4">
-                <p class="font-semibold text-gray-700">Indicators:</p>
-                <ul class="list-disc ml-6 text-gray-600">
-                    ${
-                        isPhishing
-                        ? "<li>Suspicious language detected</li><li>Matches known phishing patterns</li>"
-                        : "<li>No strong phishing indicators found</li>"
-                    }
-                </ul>
-            </div>
+            <p class="font-semibold text-gray-700 mb-2">Detected Indicators:</p>
+            <ul class="list-disc ml-6 text-gray-600">
+                ${indicatorList}
+            </ul>
         `;
 
     } catch (err) {
-        console.error(err);
         alert("Error contacting backend.");
     }
 
@@ -170,9 +257,21 @@ async function analyzeEmail() {
     btn.disabled = false;
 }
 
+/* --- RESET --- */
 function resetInput() {
     document.getElementById("emailContent").value = "";
     document.getElementById("resultBox").classList.add("hidden");
+}
+
+/* --- MODAL CONTROLS --- */
+function openModelModal() {
+    const modal = document.getElementById("modelModal");
+    modal.classList.remove("hidden");
+    modal.classList.add("flex");
+}
+
+function closeModelModal() {
+    document.getElementById("modelModal").classList.add("hidden");
 }
 </script>
 
