--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phishing Email Detector</title>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="logo.png">
+
     <script src="https://cdn.tailwindcss.com"></script>
 
     <style>
@@ -15,7 +19,10 @@
             height: 20px;
             animation: spin 1s linear infinite;
         }
-        @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
+        @keyframes spin { 
+            0% { transform: rotate(0deg); } 
+            100% { transform: rotate(360deg); } 
+        }
     </style>
 </head>
 
@@ -26,7 +33,10 @@
         <!-- HEADER -->
         <div class="bg-white shadow-lg rounded-2xl p-6 mb-6 flex items-center justify-between">
             <div>
-                <h1 class="text-3xl font-bold text-gray-800">Phishing Email Detector</h1>
+                <div class="flex items-center gap-3">
+                    <img src="logo.png" alt="Logo" class="w-12 h-12">
+                    <h1 class="text-3xl font-bold text-gray-800">Phishing Email Detector</h1>
+                </div>
                 <p class="text-gray-600">Email Security Intelligence Developed by Amitabh’s Cyber-AI Lab</p>
             </div>
 
