--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Phishing Email Detector</title>
+    <title>PhishGuard AI</title>
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="logo.png">
@@ -35,9 +35,9 @@
             <div>
                 <div class="flex items-center gap-3">
                     <img src="logo.png" alt="Logo" class="w-12 h-12">
-                    <h1 class="text-3xl font-bold text-gray-800">Phishing Email Detector</h1>
+                    <h1 class="text-3xl font-bold text-gray-800">PhishGuard AI</h1>
                 </div>
-                <p class="text-gray-600">Email Security Intelligence Developed by Amitabh’s Cyber-AI Lab</p>
+                <p class="text-gray-600">AI-Powered Phishing Email Detector</p>
             </div>
 
             <div class="text-right">
