--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PhishGuard AI</title>
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="logo.png">
     <script src="https://cdn.tailwindcss.com"></script>
 
     <style>
@@ -26,6 +28,7 @@
         <!-- HEADER -->
         <div class="bg-white shadow-lg rounded-2xl p-6 mb-6 flex items-center justify-between">
             <div>
+                <img src="logo.png" alt="Logo" class="w-12 h-12">
                 <h1 class="text-3xl font-bold text-gray-800">PhishGuard AI</h1>
                 <p class="text-gray-600">AI-Powered Phishing Email Detector</p>
             </div>
