--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             border: 3px solid #e5e7eb;
             border-top: 3px solid #4f46e5;
             border-radius: 50%;
-            width: 20px;
-            height: 20px;
+            width: 40px;
+            height: 40px;
             animation: spin 1s linear infinite;
         }
         @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
@@ -28,9 +28,11 @@
         <!-- HEADER -->
         <div class="bg-white shadow-lg rounded-2xl p-6 mb-6 flex items-center justify-between">
             <div>
-                <img src="logo.png" alt="Logo" class="w-12 h-12">
-                <h1 class="text-3xl font-bold text-gray-800">PhishGuard AI</h1>
-                <p class="text-gray-600">AI-Powered Phishing Email Detector</p>
+                <div class="flex items-center gap-3">
+                    <img src="logo.png" alt="Logo" class="w-12 h-12">
+                    <h1 class="text-3xl font-bold text-gray-800">PhishGuard AI</h1>
+                    <p class="text-gray-600">AI-Powered Phishing Email Detector</p>
+                </div>
             </div>
 
             <div class="text-right">
