--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
         <div class="bg-white shadow-lg rounded-2xl p-6 mb-6 flex items-center justify-between">
             <div>
                 <div class="flex items-center gap-3">
-                    <img src="logo.png" alt="Logo" class="w-12 h-12">
+                    <img src="logo.png" alt="Logo" class="w-24 h-24">
                     <h1 class="text-3xl font-bold text-gray-800">PhishGuard AI</h1>
-                    <p class="text-gray-600">AI-Powered Phishing Email Detector</p>
                 </div>
+                <p class="text-gray-600"> </p>
+                <p class="text-gray-600">AI-Powered Phishing Email Detector</p>
             </div>
 
             <div class="text-right">
@@ -49,7 +50,7 @@
         <!-- MAIN PANEL -->
         <div class="bg-white shadow-lg rounded-2xl p-6 mb-6">
             <h2 class="text-xl font-semibold text-gray-800 mb-2 flex items-center gap-2">
-                📧 Email Content Analysis
+                Email Content Analysis
             </h2>
 
             <!-- SAMPLE EMAIL BUTTONS -->
