--- a/index.html
+++ b/index.html
@@ -29,11 +29,13 @@
         <div class="bg-white shadow-lg rounded-2xl p-6 mb-6 flex items-center justify-between">
             <div>
                 <div class="flex items-center gap-3">
-                    <img src="logo.png" alt="Logo" class="w-24 h-24">
+                    <img src="logo.png" alt="Logo" class="w-15 h-15">
                     <h1 class="text-3xl font-bold text-gray-800">PhishGuard AI</h1>
                 </div>
-                <p class="text-gray-600"> </p>
+                <div class="flex items-center gap-3">
+                <p class="text-gray-100"></p>
                 <p class="text-gray-600">AI-Powered Phishing Email Detector</p>
+                </div>   
             </div>
 
             <div class="text-right">
