--- a/index.html
+++ b/index.html
@@ -27,14 +27,13 @@
 
         <!-- HEADER -->
         <div class="bg-white shadow-lg rounded-2xl p-6 mb-6 flex items-center justify-between">
-            <div>
-                <div class="flex items-center gap-3">
-                    <img src="logo.png" alt="Logo" class="w-12 h-12">
+            <div class="flex items-center gap-3">
+                <img src="logo.png" alt="Logo" class="w-12 h-12">
+            
+                <div class="flex flex-col">
                     <h1 class="text-3xl font-bold text-gray-800">PhishGuard AI</h1>
+                    <p class="text-gray-600 text-base">AI-Powered Phishing Email Detector</p>
                 </div>
-                <div class="flex items-center gap-3">
-                <p class="text-gray-600">AI-Powered Phishing Email Detector</p>
-                </div>   
             </div>
 
             <div class="text-right">
