--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
 
         <!-- HEADER -->
         <div class="bg-white shadow-lg rounded-2xl p-6 mb-6 flex items-center justify-between">
-            <div class="flex items-center gap-3">
-                <img src="logo.png" alt="Logo" class="w-12 h-12">
+            <div class="flex items-center gap-4">
+                <img src="logo.png" alt="Logo" class="w-14 h-14">
             
-                <div class="flex flex-col">
-                    <h1 class="text-3xl font-bold text-gray-800">PhishGuard AI</h1>
-                    <p class="text-gray-600 text-base">AI-Powered Phishing Email Detector</p>
+                <div class="flex flex-col leading-tight">
+                    <h1 class="text-4xl font-extrabold text-gray-900">PhishGuard AI</h1>
+                    <p class="text-lg text-gray-600">AI-Powered Phishing Email Detector</p>
                 </div>
             </div>
 
