--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PhishGuard AI</title>
 
-    <!-- Favicon -->
     <link rel="icon" type="image/png" href="logo.png">
-
     <script src="https://cdn.tailwindcss.com"></script>
 
     <style>
@@ -19,132 +17,144 @@
             height: 40px;
             animation: spin 1s linear infinite;
         }
-        @keyframes spin { 
-            0% { transform: rotate(0deg); } 
-            100% { transform: rotate(360deg); } 
-        }
+        @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg);} }
     </style>
 </head>
 
-<body class="bg-gradient-to-br from-indigo-50 via-white to-blue-50 min-h-screen py-10">
+<body class="bg-gradient-to-br from-indigo-50 via-white to-blue-50 min-h-screen py-8 sm:py-10">
 
-    <div class="max-w-5xl mx-auto px-4">
+<div class="max-w-5xl mx-auto px-4">
 
-        <!-- HEADER -->
-        <div class="bg-white shadow-lg rounded-2xl p-6 mb-6 flex items-center justify-between">
-            <div class="flex items-center gap-4">
-                <img src="logo.png" alt="Logo" class="w-14 h-14">
-            
-                <div class="flex flex-col leading-tight">
-                    <h1 class="text-4xl font-extrabold text-gray-900">PhishGuard AI</h1>
-                    <p class="text-lg text-gray-600">AI-Powered Phishing Email Detector</p>
-                </div>
-            </div>
+    <!-- HEADER -->
+    <div class="bg-white shadow-lg rounded-2xl p-4 sm:p-6 mb-6 
+                flex flex-col md:flex-row md:items-center md:justify-between gap-4">
 
-            <div class="text-right">
-                <p class="text-sm text-gray-500">Model Accuracy</p>
-                <p class="text-3xl font-bold text-green-600">95.71%</p>
+        <div class="flex items-center gap-3 sm:gap-4">
+            <img src="logo.png" alt="Logo" class="w-12 h-12 sm:w-14 sm:h-14">
 
-                <button onclick="openModelModal()" 
-                    class="mt-2 text-xs px-3 py-1 bg-indigo-100 text-indigo-700 rounded-lg border border-indigo-300 hover:bg-indigo-200">
-                    Model Info
-                </button>
+            <div class="flex flex-col leading-tight">
+                <h1 class="text-3xl sm:text-4xl lg:text-5xl font-extrabold text-gray-900">
+                    PhishGuard AI
+                </h1>
+
+                <p class="text-base sm:text-lg text-gray-600">
+                    AI-Powered Phishing Email Detector
+                </p>
             </div>
         </div>
 
-        <!-- MAIN PANEL -->
-        <div class="bg-white shadow-lg rounded-2xl p-6 mb-6">
-            <h2 class="text-xl font-semibold text-gray-800 mb-2 flex items-center gap-2">
-                📧 Email Content Analysis
-            </h2>
+        <div class="text-left md:text-right">
+            <p class="text-xs sm:text-sm text-gray-500">Model Accuracy</p>
+            <p class="text-2xl sm:text-3xl font-bold text-green-600">95.71%</p>
 
-            <!-- SAMPLE EMAIL BUTTONS -->
-            <div class="flex gap-3 mb-4">
-                <button onclick="loadSample('phishing')" 
-                    class="text-sm bg-red-50 text-red-700 px-4 py-2 rounded-lg border border-red-200 hover:bg-red-100">
-                    Load Phishing Sample
-                </button>
-
-                <button onclick="loadSample('safe')" 
-                    class="text-sm bg-green-50 text-green-700 px-4 py-2 rounded-lg border border-green-200 hover:bg-green-100">
-                    Load Safe Sample
-                </button>
-
-                <button onclick="loadSample('suspicious')" 
-                    class="text-sm bg-yellow-50 text-yellow-700 px-4 py-2 rounded-lg border border-yellow-200 hover:bg-yellow-100">
-                    Load Suspicious Sample
-                </button>
-            </div>
-
-            <textarea
-                id="emailContent"
-                class="w-full h-52 p-4 border-2 border-gray-300 rounded-xl focus:ring-2 focus:ring-indigo-400 focus:border-indigo-400 transition"
-                placeholder="Paste the email content you want to analyze..."
-            ></textarea>
-
-            <div class="flex gap-3 mt-4">
-                <button
-                    onclick="analyzeEmail()"
-                    id="analyzeBtn"
-                    class="flex-1 bg-indigo-600 hover:bg-indigo-700 text-white py-3 rounded-xl font-semibold transition flex items-center justify-center gap-2"
-                >
-                    Analyze Email
-                </button>
-
-                <button
-                    onclick="resetInput()"
-                    class="px-5 py-3 bg-gray-100 hover:bg-gray-200 rounded-xl font-medium text-gray-700"
-                >
-                    Reset
-                </button>
-            </div>
-
-            <!-- Results -->
-            <div id="resultBox" class="hidden mt-6 p-6 rounded-xl border-2 bg-gradient-to-r from-gray-50 to-blue-50"></div>
+            <button onclick="openModelModal()" 
+                class="mt-2 text-xs px-3 py-1 bg-indigo-100 text-indigo-700 rounded-lg border border-indigo-300 hover:bg-indigo-200">
+                Model Info
+            </button>
         </div>
-
-        <!-- MODEL PERFORMANCE -->
-        <div class="bg-white shadow-lg rounded-2xl p-6 mb-6">
-            <h3 class="text-lg font-semibold mb-4">Model Performance</h3>
-
-            <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
-                <div>
-                    <p class="text-sm text-gray-500">Accuracy</p>
-                    <p class="text-xl font-bold text-indigo-600">95.71%</p>
-                </div>
-                <div>
-                    <p class="text-sm text-gray-500">Precision</p>
-                    <p class="text-xl font-bold text-indigo-600">93.99%</p>
-                </div>
-                <div>
-                    <p class="text-sm text-gray-500">Recall</p>
-                    <p class="text-xl font-bold text-indigo-600">95.14%</p>
-                </div>
-                <div>
-                    <p class="text-sm text-gray-500">F1 Score</p>
-                    <p class="text-xl font-bold text-indigo-600">94.56%</p>
-                </div>
-            </div>
-
-            <p class="text-xs text-gray-400 mt-3">Model: Logistic Regression | Dataset size: 18,634 emails</p>
-        </div>
-
-        <!-- SECURITY TIPS -->
-        <div class="bg-yellow-50 border-2 border-yellow-200 rounded-xl p-6 shadow-md">
-            <h3 class="text-lg font-semibold mb-3 text-gray-800">⚠️ Common Phishing Red Flags</h3>
-            <ul class="space-y-2 text-gray-700">
-                <li>• Urgent or threatening language</li>
-                <li>• Requests for financial or login info</li>
-                <li>• Suspicious links or attachments</li>
-                <li>• Unexpected sender or generic greetings</li>
-                <li>• Poor grammar or spelling errors</li>
-            </ul>
-        </div>
-
-        <p class="text-center text-xs text-gray-500 mt-6">
-            Designed and defended by Amitabh’s Cyber-AI Lab
-        </p>
     </div>
+
+    <!-- MAIN PANEL -->
+    <div class="bg-white shadow-lg rounded-2xl p-4 sm:p-6 mb-6 border border-gray-100">
+
+        <h2 class="text-lg sm:text-xl font-semibold text-gray-800 mb-2 flex items-center gap-2">
+            📧 Email Content Analysis
+        </h2>
+
+        <!-- SAMPLE EMAIL BUTTONS -->
+        <div class="flex flex-wrap gap-2 sm:gap-3 mb-4">
+            <button onclick="loadSample('phishing')" 
+                class="text-sm bg-red-50 text-red-700 px-3 sm:px-4 py-2 rounded-lg border border-red-200 hover:bg-red-100">
+                Load Phishing Sample
+            </button>
+
+            <button onclick="loadSample('safe')" 
+                class="text-sm bg-green-50 text-green-700 px-3 sm:px-4 py-2 rounded-lg border border-green-200 hover:bg-green-100">
+                Load Safe Sample
+            </button>
+
+            <button onclick="loadSample('suspicious')" 
+                class="text-sm bg-yellow-50 text-yellow-700 px-3 sm:px-4 py-2 rounded-lg border border-yellow-200 hover:bg-yellow-100">
+                Load Suspicious Sample
+            </button>
+        </div>
+
+        <textarea
+            id="emailContent"
+            class="w-full h-40 sm:h-52 md:h-64 p-4 border-2 border-gray-300 rounded-xl 
+                   focus:ring-2 focus:ring-indigo-400 focus:border-indigo-400 transition"
+            placeholder="Paste the email content you want to analyze..."
+        ></textarea>
+
+        <div class="flex flex-col sm:flex-row gap-3 mt-4">
+            <button
+                onclick="analyzeEmail()"
+                id="analyzeBtn"
+                class="flex-1 bg-indigo-600 hover:bg-indigo-700 text-white py-3 rounded-xl 
+                       font-semibold transition flex items-center justify-center gap-2"
+            >
+                Analyze Email
+            </button>
+
+            <button
+                onclick="resetInput()"
+                class="px-5 py-3 bg-gray-100 hover:bg-gray-200 rounded-xl font-medium text-gray-700"
+            >
+                Reset
+            </button>
+        </div>
+
+        <div id="resultBox" 
+             class="hidden mt-6 p-6 rounded-xl border-2 bg-gradient-to-r from-gray-50 to-blue-50 break-words">
+        </div>
+    </div>
+
+    <!-- MODEL PERFORMANCE -->
+    <div class="bg-white shadow-lg rounded-2xl p-4 sm:p-6 mb-6 border border-gray-100">
+
+        <h3 class="text-lg sm:text-xl font-semibold mb-4">Model Performance</h3>
+
+        <div class="grid grid-cols-2 md:grid-cols-4 gap-4 text-center md:text-left">
+            <div>
+                <p class="text-xs sm:text-sm text-gray-500">Accuracy</p>
+                <p class="text-xl font-bold text-indigo-600">95.71%</p>
+            </div>
+            <div>
+                <p class="text-xs sm:text-sm text-gray-500">Precision</p>
+                <p class="text-xl font-bold text-indigo-600">93.99%</p>
+            </div>
+            <div>
+                <p class="text-xs sm:text-sm text-gray-500">Recall</p>
+                <p class="text-xl font-bold text-indigo-600">95.14%</p>
+            </div>
+            <div>
+                <p class="text-xs sm:text-sm text-gray-500">F1 Score</p>
+                <p class="text-xl font-bold text-indigo-600">94.56%</p>
+            </div>
+        </div>
+
+        <p class="text-xs text-gray-400 mt-3">Model: Logistic Regression | Dataset size: 18,634 emails</p>
+    </div>
+
+    <!-- SECURITY TIPS -->
+    <div class="bg-yellow-50 border-2 border-yellow-200 rounded-xl p-4 sm:p-6 shadow-md">
+        <h3 class="text-lg sm:text-xl font-semibold mb-3 text-gray-800">
+            ⚠️ Common Phishing Red Flags
+        </h3>
+
+        <ul class="space-y-2 text-gray-700">
+            <li>• Urgent or threatening language</li>
+            <li>• Requests for financial or login info</li>
+            <li>• Suspicious links or attachments</li>
+            <li>• Unexpected sender or generic greetings</li>
+            <li>• Poor grammar or spelling errors</li>
+        </ul>
+    </div>
+
+    <p class="text-center text-xs sm:text-sm text-gray-500 mt-6">
+        Designed and defended by Amitabh’s Cyber-AI Lab
+    </p>
+</div>
 
 <!-- MODEL INFO MODAL -->
 <div id="modelModal" class="fixed inset-0 bg-black/40 backdrop-blur-sm hidden items-center justify-center">
@@ -164,7 +174,7 @@
 </div>
 
 <script>
-/* --- SAMPLE EMAILS --- */
+/* SAMPLE EMAILS */
 const samples = {
     phishing: `URGENT: Your account has been suspended.
 Click the link below immediately to verify your identity:
@@ -187,7 +197,7 @@ function loadSample(type) {
     document.getElementById("emailContent").value = samples[type];
 }
 
-/* --- ANALYSIS --- */
+/* ANALYSIS */
 async function analyzeEmail() {
     const email = document.getElementById("emailContent").value.trim();
     const btn = document.getElementById("analyzeBtn");
@@ -208,7 +218,6 @@ async function analyzeEmail() {
         const data = await response.json();
         const isPhishing = data.prediction === 1;
 
-        /* --- NLP INDICATORS --- */
         const indicators = [];
         const lower = email.toLowerCase();
 
@@ -227,14 +236,13 @@ async function analyzeEmail() {
 
         resultBox.classList.remove("hidden");
 
-        /* --- UI RESULT BLOCK --- */
         resultBox.innerHTML = `
-            <div class="flex items-center justify-between mb-4">
+            <div class="flex flex-col sm:flex-row items-start sm:items-center justify-between mb-4">
                 <h3 class="text-xl font-bold ${isPhishing ? 'text-red-600' : 'text-green-600'}">
                     ${isPhishing ? "🚨 Phishing Detected" : "✅ Safe Email"}
                 </h3>
 
-                <span class="px-3 py-1 text-sm font-semibold rounded-lg 
+                <span class="px-3 py-1 text-sm font-semibold rounded-lg mt-2 sm:mt-0
                     ${isPhishing ? 'bg-red-100 text-red-700' : 'bg-green-100 text-green-700'}">
                     ${isPhishing ? "High Risk" : "Low Risk"}
                 </span>
@@ -244,8 +252,8 @@ async function analyzeEmail() {
 
             <div class="w-full bg-gray-200 rounded-full h-3 mb-3">
                 <div class="h-3 rounded-full transition-all duration-500 
-                ${isPhishing ? 'bg-red-500' : 'bg-green-500'}" 
-                    style="width: ${isPhishing ? data.phishing_prob : data.safe_prob}%">
+                    ${isPhishing ? 'bg-red-500' : 'bg-green-500'}"
+                    style="width: ${(isPhishing ? data.phishing_prob : data.safe_prob)}%;">
                 </div>
             </div>
 
@@ -255,12 +263,13 @@ async function analyzeEmail() {
             </p>
 
             <p class="font-semibold text-gray-700 mb-2">Detected Indicators:</p>
+
             <ul class="list-disc ml-6 text-gray-600">
                 ${indicatorList}
             </ul>
         `;
 
-    } catch (err) {
+    } catch {
         alert("Error contacting backend.");
     }
 
@@ -268,13 +277,13 @@ async function analyzeEmail() {
     btn.disabled = false;
 }
 
-/* --- RESET --- */
+/* RESET */
 function resetInput() {
     document.getElementById("emailContent").value = "";
     document.getElementById("resultBox").classList.add("hidden");
 }
 
-/* --- MODAL CONTROLS --- */
+/* MODAL */
 function openModelModal() {
     const modal = document.getElementById("modelModal");
     modal.classList.remove("hidden");
